tests/ui/mismatched_types/elide-on-tuple-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/elide-on-tuple-mismatch.rs:19:9
   |
LL |     let (a, b, c) = (A::new(), A::new());
   |         ^^^^^^^^^   -------------------- this expression has type `(A, A)`
   |         |
   |         expected a tuple with 2 elements, found one with 3 elements
   |
   = note: expected tuple `(A, A)`
              found tuple `(_, _, _)`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
